# DeathStarBench

hotelReservation/: config.json  k8s-geo-mongo.sh  (+1 more)
socialNetwork/: CMakeLists.txt  Dockerfile  docker-compose.yml
socialNetwork/helm-chart/socialnetwork/: ca.crt  ca.key  tls.crt  tls.csr  tls.key  tls.pem  values.yaml
socialNetwork/helm-chart/socialnetwork/charts/compose-post-service/: values.yaml
socialNetwork/helm-chart/socialnetwork/charts/home-timeline-service/: values.yaml
socialNetwork/helm-chart/socialnetwork/charts/media-mongodb/: values.yaml
socialNetwork/helm-chart/socialnetwork/templates/: _baseDeployment.tpl
socialNetwork/nginx-web-server/: jaeger-config.json
socialNetwork/src/: CMakeLists.txt  tracing.h
socialNetwork/src/ComposePostService/: CMakeLists.txt  ComposePostHandler.h  ComposePostService.cpp
socialNetwork/src/HomeTimelineService/: CMakeLists.txt
socialNetwork/src/MediaService/: CMakeLists.txt
socialNetwork/src/PostStorageService/: CMakeLists.txt
socialNetwork/src/SocialGraphService/: CMakeLists.txt
socialNetwork/src/TextService/: CMakeLists.txt  TextHandler.h  TextService.cpp
socialNetwork/src/UniqueIdService/: CMakeLists.txt
socialNetwork/src/UrlShortenService/: CMakeLists.txt  UrlShortenHandler.h  UrlShortenService.cpp
socialNetwork/src/UserMentionService/: CMakeLists.txt  UserMentionHandler.h  UserMentionService.cpp
socialNetwork/src/UserService/: CMakeLists.txt  UserHandler.h  UserService.cpp
socialNetwork/src/UserTimelineService/: CMakeLists.txt
socialNetwork/src/WriteHomeTimelineService/: CMakeLists.txt
(+42 files in other folders)
